# NahumBot-robot

./: .gitignore  README.md  basura-readme.md  pyproject.toml
src/: constants.py  gps.py.save
src/arduino/: main.py  sensores.ino
src/camera/: main.py
src/gps/: arduino_gps.py  main.py  new_gps.py  orientation.py  sensor_gps_brujula.ino
src/motor/: ball_follower.py  brushless2.py  brushless_movement.py  brushless_test.py  engine_test.py  engine_test.py.save  requirements.txt
src/server/: main.py  map_mode.py
src/waterbomb/: waterbomb.py
